init correction
