# src/controllers/ApiRoute.js
@@ -11,7 +11,7 @@ const mnemonic = process.env.MNEMONIC;
 const rpcEndpoint = process.env.RPC;
 const contractAddress = process.env.CONTRACT;
 const web3Token = process.env.WEB3_STORAGE_TOKEN;
-const storage = new Web3Storage({ web3Token });
+const storage = new Web3Storage({ token: web3Token });
 
 let wallet;
 let firstAccount;
@@ -53,14 +53,15 @@ router.route('/Image/Upload').post(async (req, res) => {
     #swagger.description = 'Upload image to IPFS' */
 
     /*    #swagger.consumes = ['multipart/form-data']  
-          #swagger.parameters['image'] = {
-              in: 'formData',
-              type: 'file',
-              required: 'true',
-              description: 'Some description...',
+        #swagger.parameters['image'] = {
+            in: 'formData',
+            type: 'file',
+            required: 'true',
+            description: 'Some description...',
     } */
 
     const imageFile = req.files.image;
+
     try {
         const filesObj = makeFileObjects(imageFile);
         const cid = await storage.put(filesObj);
@@ -86,21 +87,12 @@ router.route('/Token/Mint').post(async (req, res) => {
     /* 	#swagger.tags = ['Token']
     #swagger.description = 'Mint NFT Token' */
 
-    /*	#swagger.requestBody = {
-        required: true,
-        content: {
-            "application/json": {
-                schema: {
-                    $ref: "#/definitions/Mint"
-                }  
-            },
-            "application/xml": {
-                schema: {
-                    $ref: "#/definitions/Mint"
-                }  
-            }
-        }
+    /*  #swagger.parameters['obj'] = {
+            in: 'body',
+            description: 'Token Information',
+            schema: { $ref: '#/definitions/Mint' }
     } */
+
     if (!wallet) {
         wallet = await getWallet();
     }
@@ -174,20 +166,10 @@ router.post('/Token/Transfer', async (req, res, next) => {
     /* 	#swagger.tags = ['Token']
         #swagger.description = 'Transfer NFT Token' */
 
-    /*	#swagger.requestBody = {
-        required: true,
-        content: {
-            "application/json": {
-                schema: {
-                    $ref: "#/definitions/Transfer"
-                }  
-            },
-            "application/xml": {
-                schema: {
-                    $ref: "#/definitions/Transfer"
-                }  
-            }
-        }
+    /*  #swagger.parameters['obj'] = {
+            in: 'body',
+            description: 'Transfer Information',
+            schema: { $ref: '#/definitions/Transfer' }
     } */
 
     if (!wallet) {
