# swagger-output.json
@@ -1,18 +1,12 @@
 {
-  "openapi": "3.0.0",
+  "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "servers": [
-    {
-      "url": "http://localhost:3000/"
-    },
-    {
-      "url": "https://localhost:3000/"
-    }
-  ],
+  "host": "localhost:3000",
+  "basePath": "/",
   "tags": [
     {
       "name": "Token",
@@ -23,6 +17,24 @@
       "description": "Image APIs"
     }
   ],
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "apiKeyAuth": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "X-API-KEY",
+      "description": "any description..."
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/Image/Upload": {
       "post": {
@@ -30,15 +42,16 @@
           "Image"
         ],
         "description": "Upload image to IPFS",
+        "consumes": [
+          "multipart/form-data"
+        ],
         "parameters": [
           {
             "name": "image",
             "in": "formData",
+            "type": "file",
             "required": true,
-            "description": "Some description...",
-            "schema": {
-              "type": "file"
-            }
+            "description": "Some description..."
           }
         ],
         "responses": {
@@ -57,28 +70,22 @@
           "Token"
         ],
         "description": "Mint NFT Token",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Token Information",
+            "schema": {
+              "$ref": "#/definitions/Mint"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Mint"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/components/schemas/Mint"
-              }
-            }
           }
         }
       }
@@ -94,9 +101,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -115,7 +120,16 @@
           "Token"
         ],
         "description": "Transfer NFT Token",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Transfer Information",
+            "schema": {
+              "$ref": "#/definitions/Transfer"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -123,85 +137,54 @@
           "500": {
             "description": "Internal Server Error"
           }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Transfer"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/components/schemas/Transfer"
-              }
-            }
-          }
         }
       }
     }
   },
-  "components": {
-    "schemas": {
-      "Mint": {
-        "type": "object",
-        "properties": {
-          "token_id": {
-            "type": "string",
-            "example": "token_nft"
-          },
-          "owner": {
-            "type": "string",
-            "example": "aura1mmsenr5nejugxqv6jtetlckwjhsmft7f8dqud4"
-          },
-          "token_uri": {
-            "type": "string",
-            "example": "ANFT"
-          },
-          "extension": {
-            "type": "object",
-            "properties": {}
-          }
+  "definitions": {
+    "Mint": {
+      "type": "object",
+      "properties": {
+        "token_id": {
+          "type": "string",
+          "example": "token_nft"
         },
-        "required": [
-          "token_id",
-          "owner",
-          "token_uri",
-          "extension"
-        ],
-        "xml": {
-          "name": "Mint"
+        "owner": {
+          "type": "string",
+          "example": "aura1mmsenr5nejugxqv6jtetlckwjhsmft7f8dqud4"
+        },
+        "token_uri": {
+          "type": "string",
+          "example": "ANFT"
+        },
+        "extension": {
+          "type": "object",
+          "properties": {}
         }
       },
-      "Transfer": {
-        "type": "object",
-        "properties": {
-          "token_id": {
-            "type": "string",
-            "example": "token_nft"
-          },
-          "recipient": {
-            "type": "string",
-            "example": "aura1n9dk7hvqtqrpxuc52w9qsmd95dm83ccjum2636"
-          }
-        },
-        "required": [
-          "token_id",
-          "recipient"
-        ],
-        "xml": {
-          "name": "Transfer"
-        }
-      }
+      "required": [
+        "token_id",
+        "owner",
+        "token_uri",
+        "extension"
+      ]
     },
-    "securitySchemes": {
-      "apiKeyAuth": {
-        "type": "apiKey",
-        "in": "header",
-        "name": "X-API-KEY",
-        "description": "any description..."
-      }
+    "Transfer": {
+      "type": "object",
+      "properties": {
+        "token_id": {
+          "type": "string",
+          "example": "token_nft"
+        },
+        "recipient": {
+          "type": "string",
+          "example": "aura1n9dk7hvqtqrpxuc52w9qsmd95dm83ccjum2636"
+        }
+      },
+      "required": [
+        "token_id",
+        "recipient"
+      ]
     }
   }
 }
